tests/baselines/reference/overloadedStaticMethodSpecialization.errors.txt
overloadedStaticMethodSpecialization.ts(5,9): error TS2322: Type 'null' is not assignable to type 'A<S>'.


==== overloadedStaticMethodSpecialization.ts (1 errors) ====
    class A<T> {
        static B<S>(v: A<S>): A<S>;
        static B<S>(v: S): A<S>;
        static B<S>(v: any): A<S> {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'A<S>'.
        }
    }
    